--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 23
         versionCode 100
         versionName "1.0.0"
-        applicationId "com.myapp"
+        applicationId "com.fontawesome.demo"
     }
 
     signingConfigs {
